[package]
name = "datacollect-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datacollect = { path = "../datacollect", features = [ "extras" ] }
structopt = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
erased-serde = "0.3"
clap = "2.33"
tokio = { version = "1.14", features = [ "full" ] }
anyhow = "1.0"
serde_json = "1.0"
async-trait = "0.1"