[package]
name = "datacollect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "cookies", "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_with = "1.11"
anyhow = "1.0"
tokio = { version = "1.14", features = [ "full" ] }
async-trait = "0.1"
regex = "1.5"
lazy_static = "1.4"
kuchiki = "0.8"
maplit = "1.0"
futures = "0.3"